--- a/public/index.css
+++ b/public/index.css
@@ -1,17 +1,20 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body {
   height: 100vh;
   line-height: 0;
-  margin: 0;
+  position: relative;
 }
 body > .entry-point {
   display: contents;
 }
 body > .entry-point > * {
   line-height: 1;
-}
-div {
-  box-sizing: border-box;
 }
 
 main {
@@ -31,4 +34,11 @@ main > div > img {
 
 .hidden {
   display: none;
+}
+
+.drag-and-drop-file-picker > span {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -25%);
 }
